[package]
name = "nsudoku-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
color-eyre = "0.6.2"
indicatif = { version = "0.17.3", features = ["rayon"] }
ndarray = "0.15.6"
num_cpus = "1.15.0"
rayon = "1.6.1"
