[package]
name = "nsudoku-solver"
description = "A N-Dimensional Sudoku solver"
authors = ["Jalil David Salamé Messina <jalil.salame@gmail.com>"]
license = "MIT"
homepage = "https://jalil-salame.github.io/nsudoku-solver/"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
color-eyre = "0.6.2"
indicatif = { version = "0.17.3", features = ["rayon"] }
ndarray = "0.15.6"
num_cpus = "1.15.0"
rayon = "1.6.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
